--- a/index.html
+++ b/index.html
@@ -180,321 +180,8 @@
 						<label for="m-accessories">Mobile Accessories</label>
 					</div>
 				</div>
-				<div class="product-list">
-						<div class="card">
-							<img src="assets/images/product-images/neckband.webp" width="200" >
-							<span id="product-name">Neckband</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod.webp" width="200" >
-							<span id="product-name">Nirwana Ion</span>
-							<br>
-							<span id="rate">$ 100</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/headphone.webp" width="200" >
-							<span id="product-name">Headphone</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/speaker.webp" width="200" >
-							<span id="product-name">Speaker</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/watch.webp" width="200" >
-							<span id="product-name">Watch</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/blackairpod.webp" width="200" >
-							<span id="product-name">Airpod 131</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod-381.webp" width="200" >
-							<span id="product-name">Airpod 381</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/watch.webp" width="200" >
-							<span id="product-name">Watch</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/bar5400.webp" width="200" >
-							<span id="product-name">Avente Bar 5400D</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/stormcall.webp" width="200" >
-							<span id="product-name">Storm Call 2</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod131pro.webp" width="200" >
-							<span id="product-name">Airpod 131 Pro</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod161.webp" width="200" >
-							<span id="product-name">Airpod 161</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/neckband.webp" width="200" >
-							<span id="product-name">Neckband</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod.webp" width="200" >
-							<span id="product-name">Nirwana Ion</span>
-							<br>
-							<span id="rate">$ 100</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/headphone.webp" width="200" >
-							<span id="product-name">Headphone</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/speaker.webp" width="200" >
-							<span id="product-name">Speaker</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/watch.webp" width="200" >
-							<span id="product-name">Watch</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/blackairpod.webp" width="200" >
-							<span id="product-name">Airpod 131</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod-381.webp" width="200" >
-							<span id="product-name">Airpod 381</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/watch.webp" width="200" >
-							<span id="product-name">Watch</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/bar5400.webp" width="200" >
-							<span id="product-name">Avente Bar 5400D</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/stormcall.webp" width="200" >
-							<span id="product-name">Storm Call 2</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod131pro.webp" width="200" >
-							<span id="product-name">Airpod 131 Pro</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
-						<div class="card">
-							<img src="assets/images/product-images/airpod161.webp" width="200" >
-							<span id="product-name">Airpod 161</span>
-							<br>
-							<span id="rate">$ 200</span>
-							<br>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<input type="submit" name="" value="Add to Cart" id="addcart">
-						</div>
+				<div class="product-list">		
 				</div>
-			</div>
 	</main>
 	<footer>
 		<div class="footer-container">
@@ -546,5 +233,6 @@
 			</div>
 		</div>
 	</footer>
+	<script src="script.js"></script>
 </body>
 </html>
