--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						<label for="m-accessories">Mobile Accessories</label>
 					</div>
 				</div>
-				<div class="product-list">		
+				<div  class="product-list" id="product-list" >		
 				</div>
 	</main>
 	<footer>
