--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<!-- Navigation Bar End -->
 	</header>
 	<!-- Header end -->
-
+	<p>Learning Git Version Control</p>
 	<!-- Attractive slogan start -->
 	<main>
 			<div class="attractive-slogan">
